Fix alignment of quote and styling of span element

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@ html, body{
 body{
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 
 .break{
@@ -100,7 +101,7 @@ body{
 .quote blockquote{
     font-style:italic;
     font-size: 36px;
-    text-align: center;
+    text-align: left;
     /*padding: 60px 250px 60px 250px;*/
     height: auto;
     max-width: 800px;
@@ -108,10 +109,13 @@ body{
     padding-top: 8%;
 }
 
-.quote blockquote span{
+.quote span{
+    display: inline-block;
     font-style:normal;
     font-weight: bold;
     font-size: 20px;
+    padding-top: 20px;
+    padding-left: 55%;
 }
 
 
@@ -120,5 +124,6 @@ body{
     background-color: #1f2937;
     color: #f9faf8;
     flex-shrink: 0;
+    text-align: center;
 }
 
